filter chip styling & alignment fixes

--- a/client/src/app/components/search/search.component.scss
+++ b/client/src/app/components/search/search.component.scss
@@ -140,11 +140,12 @@
         }
     }
     .mat-chip-list {
-        padding-bottom: 16px;
         min-height: 40px;
         .mat-chip {
             border-radius: 4px;
-            opacity: 0.9;
+            background-color: transparent;
+            color: #008f95;
+            border: 1px solid #008f95;
             .mat-icon {
                 cursor: pointer;
                 font-size: 1rem;
